--- a/index.html
+++ b/index.html
@@ -1,5 +1,1 @@
-Jon Hargreaves
-Design generalist
-
-“If you can design one thing, you can design everything.”
-- Massimo Vignelli
+Jon Hargreaves - Design generalist
