--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="Jon Hargreaves"
-      content="Design generalist | Currently Head of Design at Caretaker"
+      content="Design generalist | Head of Design at Caretaker"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
