--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="Jon Hargreaves"
-      content="Design generalist | Head of Design at Caretaker"
+      content="Design generalist | Senior Product Designer at QuickNode"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,10 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Jon Hargreaves</title>
+    <title>Jon Hargreaves | Design Generalist</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Creating thoughtful, sustainable design for all to enjoy. I'm a multi-disciplinary designer who believes that good design is a language.</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
