--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,18 @@
 <html lang="en">
   <head>
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-RLR91ZLTBT"></script>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-RLR91ZLTBT"
+    ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-      gtag('config', 'G-RLR91ZLTBT');
+      gtag("config", "G-RLR91ZLTBT");
     </script>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -16,7 +21,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="Jon Hargreaves"
-      content="Design generalist | Senior Product Designer at QuickNode"
+      content="Product Designer | Currently designing at QuickNode & building my own ideas"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -33,10 +38,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Jon Hargreaves | Design Generalist</title>
+    <title>Jon Hargreaves | Product Designer</title>
   </head>
   <body>
-    <noscript>Creating thoughtful, sustainable design for all to enjoy. I'm a multi-disciplinary designer who believes that good design is a language.</noscript>
+    <noscript
+      >An adaptive, multidisciplinary product designer focused on identifying
+      and solving problems.</noscript
+    >
     <div id="root"></div>
     <!--
       This HTML file is a template.
