Change "adaptive" to "adaptable"

--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
   </head>
   <body>
     <noscript
-      >An adaptive, multidisciplinary product designer focused on identifying
+      >An adaptable, multidisciplinary product designer focused on identifying
       and solving problems.</noscript
     >
     <div id="root"></div>
